[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentguard"
version = "0.1.0"
description = "AI-powered multi-agent code security scanner using MiMo V2.5"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "aazinfard", email = "aazinfarid@gmail.com"}
]
keywords = ["security", "ai", "code-analysis", "mimo", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
agentguard = "agentguard.cli:main"

[project.urls]
Homepage = "https://github.com/aazinfard/agentguard"
Repository = "https://github.com/aazinfard/agentguard"
Issues = "https://github.com/aazinfard/agentguard/issues"
